--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "jest",
+		"flow": "flow",
+		"flow-typed": "flow-typed install"
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
@@ -14,6 +16,8 @@
 	"devDependencies": {
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
+		"flow-bin": "0.40.0",
+		"flow-typed": "^2.1.2",
 		"jest": "19.0.2",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
