--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"flow-bin": "0.40.0",
 		"flow-typed": "^2.1.2",
 		"jest": "19.0.2",
+		"react-native-dotenv": "^0.0.4",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
 	"jest": {
