--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.4",
 		"react-native-loading-spinner-overlay": "^0.4.4",
+		"react-native-vector-icons": "^4.1.0",
 		"url-parse": "^1.1.9"
 	},
 	"devDependencies": {
