--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 QIITAKE_CLIENT_ID=***
 QIITAKE_CLIENT_SECRET=***
-QIITAKE_REDIRECT_URL=https://example.com
+QIITAKE_REDIRECT_URL=https://example.com/redirect
